--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,7 @@
 <nav>
   {% for item in site.data.navigation %}
     {% if page.url == item.link %}
-      <h4> {{item.name }} </h4>
+       {{item.name }}
     {% else %}
       <a href="{{ item.link }}">
         {{ item.name }}
